--- a/src/HpSubscriptions/Views/Subscriptions/Index.cshtml
+++ b/src/HpSubscriptions/Views/Subscriptions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HpSubscriptions.Entities.SubscriptionRecord>
+﻿@model IEnumerable<HpSubscriptions.Models.SubscriptionRecordViewModel>
 
 @{
     ViewBag.Title = "Subscriptions";
